# personal-ai-employee

./: .env.example  .gitignore  cloud_orchestrator.py  docker-compose.yml  facebook_poster.py  facebook_watcher.py  gmail_auth.py  gmail_sender.py  gmail_watcher.py  linkedin_debug.py  linkedin_poster.py  linkedin_watcher.py  local_orchestrator.py  odoo.conf  odoo_mcp.py  pyproject.toml  ralph_wiggum.sh  requirements.txt  sync_vault.py  watcher.py
.claude/: settings.json
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Done/: DONE_20260314_034611_DROP_fresh-test.txt.md  DONE_20260317_145700_SENT_REPLY_20260317_hello_world_python.md  DONE_20260317_150937_PUBLISHED_LINKEDIN_POST_silver_complete_gold_next.md  DONE_20260317_164855_GMAIL_a_few_days_left_for_standard_799_first_y.md  DONE_20260317_164856_GMAIL_gdg_kolachi_just_posted_new_content.md  DONE_20260317_164856_GMAIL_muhammad_accepted_your_invitation_explor.md  DONE_20260317_164856_GMAIL_muhammad_add_sagar_sheikh_studant.md  DONE_20260317_164856_GMAIL_muhammad_id_like_to_connect.md  DONE_20260317_164856_GMAIL_muhammad_your_posts_got_109_impressions_.md  DONE_20260317_164856_GMAIL_view_fatima_riazs_post_and_your_next_ste.md  DONE_20260317_164856_GMAIL_you_have_3_new_invitations.md  DONE_20260317_195441_GMAIL_write_hello_world_in_python.md  DONE_20260326_154155_PUBLISHED_FACEBOOK_POST_gold_tier_complete_20260326.md  DONE_20260326_215337_PUBLISHED_FACEBOOK_POST_motivation_gold_tier_20260327.md  (+2 more)
Drop/: test-report.txt
deploy/: cloud_setup.sh
(+31 files in other folders)
