[project]
name = "an-hack-0"
version = "0.2.0"
description = "Personal AI Employee — Gold Tier (LinkedIn, Facebook, Gmail, Odoo)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Silver Tier
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.0",
    "playwright>=1.58.0",
    "watchdog>=6.0.0",
    # Gold Tier — Odoo MCP server
    "mcp>=1.0.0",
]
